--- a/src/technical-packages/logger/package.json
+++ b/src/technical-packages/logger/package.json
@@ -45,6 +45,7 @@
     "axios": "^0.21.1",
     "clean-stack": "3.0.1",
     "discord.js": "^12.5.3",
+    "emittery": "^0.9.2",
     "fs-extra": "^10.0.0",
     "is-browser": "^2.1.0",
     "joi": "^17.4.0",
